--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <label class="email">Email: <input type="text" id="email"></label>
             <label class="senha">Senha: <input type="password" id="senha"></label>
 
-            <button onclick="">Register</button>
+            <button onclick="" id="login_buton">Register</button>
         </section>
     </main>
 
