--- a/index.html
+++ b/index.html
@@ -10,22 +10,25 @@
 <body>
     
     <main>
-        <nav id="mudar">
+        <!-- <nav id="mudar">
             <button onclick="" class="deCima1">LOGIN</button>
             <button onclick="" class="deCima2">Register</button>
-        </nav>
+        </nav> -->
         <section id="login">
-            <label class="email">Email: <input type="text"></label>
-            <label class="senha">Senha: <input type="password"></label>
+            <h1 id="tittle">LOGIN</h1>
+            <input type="text" placeholder="Email:"  class="email">
+            <input type="password" placeholder="Senha:" class="senha">
 
-            <button onclick="">LOGIN</button>
+            <label id="checkBox"><input type="checkbox">Clique aqui para aceitar os termos</label>
+
+            <button onclick="" id="login_button">LOGIN</button>
         </section>
-        <section id="register">
+        <!-- <section id="register">
             <label class="email">Email: <input type="text" id="email"></label>
             <label class="senha">Senha: <input type="password" id="senha"></label>
 
-            <button onclick="" id="login_buton">Register</button>
-        </section>
+            <button onclick="" id="register_button">REGISTER</button>
+        </section> -->
     </main>
 
     <script src="script.js"></script>
