Tela login quase terminada

--- a/index.html
+++ b/index.html
@@ -9,27 +9,13 @@
 </head>
 <body>
     
-    <main>
-        <!-- <nav id="mudar">
-            <button onclick="" class="deCima1">LOGIN</button>
-            <button onclick="" class="deCima2">Register</button>
-        </nav> -->
-        <section id="login">
-            <h1 id="tittle">LOGIN</h1>
-            <input type="text" placeholder="Email:"  class="email">
-            <input type="password" placeholder="Senha:" class="senha">
-
-            <label id="checkBox"><input type="checkbox">Clique aqui para aceitar os termos</label>
-
-            <button onclick="" id="login_button">LOGIN</button>
-        </section>
-        <!-- <section id="register">
-            <label class="email">Email: <input type="text" id="email"></label>
-            <label class="senha">Senha: <input type="password" id="senha"></label>
-
-            <button onclick="" id="register_button">REGISTER</button>
-        </section> -->
-    </main>
+    <form id="login">
+        <h1>Login</h1>
+        <input type="text" placeholder="Email/Usuario:" class="input">
+        <input type="password" placeholder="Senha:" class="input">
+        <label for="check"><input type="checkbox" id="check">Clique para aceitar os termos</label>
+        <button onclick="" class="button">log-in</button>
+    </form>
 
     <script src="script.js"></script>
 </body>
