--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
-    <form id="login">
-        <h1>Login</h1>
-        <input type="text" placeholder="Email/Usuario:" class="input">
-        <input type="password" placeholder="Senha:" class="input">
-        <label for="check"><input type="checkbox" id="check">Clique para aceitar os termos</label>
-        <button onclick="" class="button">log-in</button>
-    </form>
-
+    <div id="caixa">
+        <div id="blur">
+            <p id="frase">Bora ficar!</p>
+            <button onclick="sim()" class="butao" id="disse_sim">Sim</button>
+            <button onclick="nao()" class="butao" id="disse_nao">Não</button>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
