--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <div id="caixa">
         <div id="blur">
             <p id="frase">Bora ficar!</p>
-            <button onclick="sim()" class="butao" id="disse_sim">Sim</button>
-            <button onclick="nao()" class="butao" id="disse_nao">Não</button>
+            <button onclick="simPorra()" class="butao" id="disse_sim">Sim</button>
+            <button onclick="naoPorra()" class="butao" id="disse_nao">Não</button>
         </div>
     </div>
     <script src="script.js"></script>
 </body>
 </html>
+
