--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Importante!!!</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="icone-de-coeur-noir.png" type="image/x-icon">
 </head>
 <body>
     <div id="caixa">
