--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="caixa">
         <div id="blur">
-            <p id="frase">MAC, eu, voce, escurinho, bora?</p>
+            <p id="frase">Bora ficar?</p>
             <button onclick="simPorra()" class="butao" id="disse_sim">Sim</button>
             <button onclick="naoPorra()" class="butao" id="disse_nao">Não</button>
         </div>
